# mat_mod_mai_2026_agent

./: .env.example  .gitignore  README.md  REFLECTION.md  pyproject.toml
agent/: __init__.py  agent.py  cli.py  client.py  config.py  logger.py  memory.py  project_paths.py  skills.py  terminal_markdown.py  tool_api.py  tools.py  types.py
data/: example_tasks.json
skills/: python_architect.md
tests/: test_agent_runtime.py  test_project_paths.py  test_terminal_markdown.py  test_tools.py
tools/: calculate.py  current_time.py  github_repo_info.py  ls.py  mkdir.py  plan_optimizer.py  read_project_file.py  write_project_file.py
