[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mat-mod-mai-2026-agent"
version = "0.1.0"
description = "Консольный AI-агент для анализа репозиториев и планирования работ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2024.2.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ai-planning-agent = "agent.cli:main"

[tool.setuptools]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py310"
